@@ -1,16 +1,23 @@
 const quietly = require('./quietly.js');
 const loudly = require('./loudly.js');
+const channel = require('./channel.js');
 
 const metacommandArray = [
 	quietly,
 	loudly,
+	channel,
 ];
 
 const run = (state) => {
-	for (const metacommand of metacommandArray) {
-		result = metacommand(state);
-		if (result) {
-			return result;
+	let updated = true;
+	while(updated) {
+		updated = false;
+		for (const metacommand of metacommandArray) {
+			result = metacommand(state);
+			if (result) {
+				state = result;
+				updated = true;
+			}
 		}
 	}
 	return state;
